# derangement

./: Cargo.toml  LICENSE  changelog.md  readme.md
src/: derange.rs  lib.rs
