[package]
name = "derangement"
version = "0.1.3"
authors = ["ray33ee <30669752+ray33ee@users.noreply.github.com>"]
edition = "2018"
license-file = "LICENSE"
description = "A Rust implementation of a permutation with no fixed points, a derangement"
homepage = "https://github.com/ray33ee/derangement"
repository = "https://github.com/ray33ee/derangement"
keywords = ["permutation", "derangement", "combinatorics", "mathematics", "shuffle"]
categories = ["data-structures", "mathematics"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.4"
serde = { version = "1.0.130", features = ["derive"] }

[dev-dependencies]
rand_xoshiro = "0.6.0"
